# ros-in-vscode

./: .gitignore
catkin_ws/src/ros_package_a/: CMakeLists.txt  package.xml
catkin_ws/src/ros_package_a/nodes/: node.py
catkin_ws/src/ros_package_a/src/package_bar/: bar.py
catkin_ws/src/ros_package_a/src/package_foo/: foo.py
catkin_ws/src/ros_package_b/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/ros_package_b/src/ros_package_b/: another_ros_util.py
src/ros_package_a/: CMakeLists.txt  package.xml  setup.py
src/ros_package_a/nodes/: listener.py  talker.py
src/ros_package_a/src/ros_package_a/: some_ros_util.py  utils.py
src/ros_package_a/test/: test_1.py
src/ros_package_b/nodes/: node.py
src/ros_package_b/src/ros_package_b/: another_ros_util.py
